--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">FlickrRecent</string>
+    <string name="menu_photo">Фото</string>
+    <string name="menu_gallery">Избранное</string>
+    <string name="unknown_error">unknown error</string>
 
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
